[package]
name = "ue-rush"
version = "0.1.0"
description = "UE-Rush Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip39 = "2.0"
solana-sdk = "1.14"
solana-client = "1.14"
once_cell = "1.17"

console_log = "1"
console_error_panic_hook = "0.1"
ipfs-api = "0.17"
tts = "0.25"
cpal = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
whatlanggo = "0.1"
rand = "0.8"
# phantom-wallet = "0.1" # or appropriate crate
# metaplex-token-metadata = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
