[package]
name = "ue-rush-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
gloo = "0.10"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
]
